# jsondb

./: Cargo.toml  LICENSE  README.md  search-index.js  settings.html  source-files.js
clap/: struct.App.html
indexmap/map/: struct.IndexMap.html
indexmap/set/: struct.IndexSet.html
itertools/: all.html  enum.Either.html  enum.EitherOrBoth.html  enum.FoldWhile.html  enum.Position.html  fn.assert_equal.html  fn.cons_tuples.html  fn.equal.html  fn.interleave.html  fn.iterate.html  fn.kmerge.html  fn.kmerge_by.html  fn.merge.html  fn.multipeek.html  fn.partition.html  fn.put_back.html  fn.repeat_call.html  fn.unfold.html  index.html  macro.iproduct.html  macro.izip.html  trait.Itertools.html  trait.PeekingNext.html
itertools/structs/: index.html  struct.Batching.html  struct.Chunk.html  struct.Chunks.html  struct.Coalesce.html  struct.Combinations.html  struct.CombinationsWithReplacement.html  struct.ConsTuples.html  struct.DedupBy.html  struct.ExactlyOneError.html  struct.Format.html  struct.FormatWith.html  struct.Group.html  struct.Groups.html  struct.Interleave.html  struct.InterleaveShortest.html  struct.Intersperse.html  struct.Iterate.html  struct.KMergeBy.html  struct.MapInto.html  struct.MapResults.html  (+34 more)
jsondb/: all.html  enum.Record.html  index.html  sidebar-items.js  struct.Database.html  struct.DeleteRecord.html  struct.False.html  struct.OpenOptions.html  struct.RecordData.html  struct.True.html  struct.UpsertRecord.html  type.RecordId.html
src/: boolean.rs  cache_tag.rs  database.rs  lib.rs  record.rs  tests.rs
syn/: all.html  index.html
(+92 files in other folders)
