[package]
name = "jsondb"
version = "0.1.3"
authors = ["Fredrik Østrem <frx.apps@gmail.com>"]
edition = "2018"
license = "MIT"
publish = false

[dependencies]
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.55"
itertools = "0.9.0"

[dev-dependencies]
crossbeam = "0.7.3"
tempfile = "3.1.0"
